@@ -1,3 +1,10 @@
+2016-02-05 Ben Shi <powerstudio1st AT 163 DOT com>
+
+	* src/SDCCast.c
+	  Fix a bug in comparason operaion.
+	* support/regression/tests/memory.c
+	  Enable more tests.
+
 2016-02-04 Ben Shi <powerstudio1st AT 163 DOT com>
 
 	* src/SDCCicode.c
